# scrobble-cloud-func

./: .gitignore  LICENSE  Makefile  README.md  logging.ini  main.py  pyproject.toml  requirements.txt  sample.env  setup.cfg  tox.ini
.github/: requirements-github.txt
.github/workflows/: mytests,old  piptest.yml
src/: bq.py  gcs.py  lastfm.py  mapping.py  mylog.py
src/my_scrobble/: __init__.py  bq.py  gcs.py  lastfm.py  mapping.py
tests/: test_connectivity_and_schema.py
