[metadata]
name = my_scrobble
version = 0.0.1
author = Ting Yew
author_email = ktingyew@gmail.com
description = A package for me to tabulate scrobbles
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3:9
    Programming Language :: Python :: 3:10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Private :: Do Not Upload

[options]
package_dir =
    =src
packages = find:
install_requires =
    google-cloud-bigquery>=2.32.0
    google-cloud-storage>=2.1.0
    pandas>=1.4.1
    pyarrow>=6.0.1
    pytz>=2021.3
    requests>=2.27.1
python_requires = 
    >=3.9

[options.packages.find]
where = src
